--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="I4q-kt-IkD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -83,6 +83,63 @@
                     <view key="view" contentMode="scaleToFill" id="K2d-UC-j3w">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vRB-sZ-OGK">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="474" id="Ety-Ub-a2R" customClass="PostCell" customModule="Instagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="474"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ety-Ub-a2R" id="afs-8W-k1x">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="474"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xYk-yf-iEX">
+                                                    <rect key="frame" x="8" y="8" width="398" height="418.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="xYk-yf-iEX" secondAttribute="height" multiplier="199:209" id="Y0W-Rl-ca6"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emily" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kj-8c-xpi">
+                                                    <rect key="frame" x="28" y="434.5" width="41" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="This is an example comment!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7E-Ma-6vP">
+                                                    <rect key="frame" x="77" y="434.5" width="309" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xYk-yf-iEX" firstAttribute="leading" secondItem="afs-8W-k1x" secondAttribute="leading" constant="8" id="0du-FE-98U"/>
+                                                <constraint firstItem="l7E-Ma-6vP" firstAttribute="top" secondItem="xYk-yf-iEX" secondAttribute="bottom" constant="8" id="3Dt-6i-WGe"/>
+                                                <constraint firstAttribute="trailing" secondItem="xYk-yf-iEX" secondAttribute="trailing" constant="8" id="6NX-Oj-YDw"/>
+                                                <constraint firstItem="5kj-8c-xpi" firstAttribute="top" secondItem="xYk-yf-iEX" secondAttribute="bottom" constant="8" id="6Wg-2c-2vA"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="l7E-Ma-6vP" secondAttribute="trailing" constant="8" id="COx-iH-1Hb"/>
+                                                <constraint firstItem="5kj-8c-xpi" firstAttribute="centerY" secondItem="l7E-Ma-6vP" secondAttribute="centerY" id="HeJ-lS-K5H"/>
+                                                <constraint firstItem="5kj-8c-xpi" firstAttribute="top" secondItem="xYk-yf-iEX" secondAttribute="bottom" constant="8" id="I7u-Nj-Dx4"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="5kj-8c-xpi" secondAttribute="bottom" constant="8" id="L6r-Wd-dyq"/>
+                                                <constraint firstItem="xYk-yf-iEX" firstAttribute="top" secondItem="afs-8W-k1x" secondAttribute="top" constant="8" id="Qhi-b3-Tky"/>
+                                                <constraint firstItem="5kj-8c-xpi" firstAttribute="leading" secondItem="afs-8W-k1x" secondAttribute="leadingMargin" constant="8" id="oos-GT-Okk"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="l7E-Ma-6vP" secondAttribute="bottom" constant="8" id="rjc-OD-DKE"/>
+                                                <constraint firstItem="l7E-Ma-6vP" firstAttribute="leading" secondItem="5kj-8c-xpi" secondAttribute="trailing" constant="8" id="sMF-Aj-Sq4"/>
+                                                <constraint firstItem="l7E-Ma-6vP" firstAttribute="baseline" secondItem="5kj-8c-xpi" secondAttribute="firstBaseline" id="xtW-4n-h0b"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="captionLabel" destination="l7E-Ma-6vP" id="9kq-Il-L3q"/>
+                                            <outlet property="photoView" destination="xYk-yf-iEX" id="jMm-qk-scg"/>
+                                            <outlet property="usernameLabel" destination="5kj-8c-xpi" id="ZMe-xU-WhV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YBF-ih-fby"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -93,6 +150,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="vRB-sZ-OGK" id="gMx-2i-Hqk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ad8-Lu-8nd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
