--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="474" id="Ety-Ub-a2R" customClass="PostCell" customModule="Instagram" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="474" id="Ety-Ub-a2R" customClass="PostCell" customModule="Instagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="474"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ety-Ub-a2R" id="afs-8W-k1x">
@@ -103,13 +103,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emily" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kj-8c-xpi">
-                                                    <rect key="frame" x="28" y="434.5" width="41" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="28" y="434.5" width="44.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="This is an example comment!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7E-Ma-6vP">
-                                                    <rect key="frame" x="77" y="434.5" width="309" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="This is an example caption!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7E-Ma-6vP">
+                                                    <rect key="frame" x="80.5" y="434.5" width="305.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -135,6 +135,41 @@
                                             <outlet property="captionLabel" destination="l7E-Ma-6vP" id="9kq-Il-L3q"/>
                                             <outlet property="photoView" destination="xYk-yf-iEX" id="jMm-qk-scg"/>
                                             <outlet property="usernameLabel" destination="5kj-8c-xpi" id="ZMe-xU-WhV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="78" id="HB3-Ok-N27" customClass="CommentCell" customModule="Instagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="502" width="414" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HB3-Ok-N27" id="Xf5-Ax-iAB">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is an example comment!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDK-1M-zYj">
+                                                    <rect key="frame" x="71.5" y="8" width="221" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dGv-P9-KXV">
+                                                    <rect key="frame" x="16" y="8" width="47.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wDK-1M-zYj" secondAttribute="bottom" constant="8" id="0ma-Fa-xni"/>
+                                                <constraint firstItem="dGv-P9-KXV" firstAttribute="top" secondItem="Xf5-Ax-iAB" secondAttribute="top" constant="8" id="3ZP-ei-InC"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="dGv-P9-KXV" secondAttribute="bottom" constant="8" id="6GU-PT-mMD"/>
+                                                <constraint firstItem="dGv-P9-KXV" firstAttribute="leading" secondItem="Xf5-Ax-iAB" secondAttribute="leading" constant="16" id="PLD-xe-Ix7"/>
+                                                <constraint firstItem="wDK-1M-zYj" firstAttribute="leading" secondItem="dGv-P9-KXV" secondAttribute="trailing" constant="8" id="R2C-tA-u2i"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wDK-1M-zYj" secondAttribute="trailing" constant="8" id="dic-TZ-rd2"/>
+                                                <constraint firstItem="wDK-1M-zYj" firstAttribute="top" secondItem="Xf5-Ax-iAB" secondAttribute="top" constant="8" id="w2e-Nm-WOr"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="wDK-1M-zYj" id="wd0-37-sPq"/>
+                                            <outlet property="nameLabel" destination="dGv-P9-KXV" id="7e4-gN-CZ5"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
